# rocketseat_mvp

./: .gitignore  README.md  case.py  padrao_mvp.py  pyproject.toml  requirements.txt  run.py
src/controllers/: person_creator_controller.py  person_finder_controller.py  pet_deleter_controller.py  pet_lister_controller.py
src/controllers/interfaces/: person_creator_controller.py  person_finder_controller.py  pet_deleter_controller.py  pet_lister_controller.py
src/errors/error_types/: http_bad_request.py  http_not_found.py  http_unprocessable_entity.py
src/main/composer/: person_creator_composer.py  person_finder_composer.py  pet_deleter_composer.py  pet_lister_composer.py
src/main/routes/: person_routes.py  pets_routes.py
src/main/server/: server.py
src/models/sqlite/entities/: people.py
src/models/sqlite/interfaces/: people_repository.py  pets_repository.py
src/models/sqlite/repositories/: people_repository.py  pets_repository.py
src/models/sqlite/settings/: base.py  connection.py
src/tests/: connection_test.py  person_creator_controller_test.py  person_creator_view_test.py  person_finder_controller_test.py  pet_deleter_controller_test.py  pet_lister_controller_test.py  pets_repository_test.py  repositories_test.py
src/validators/: person_creator_validator.py  person_creator_validator_test.py
src/views/: person_creator_view.py  person_creator_view_test.py  person_finder_view.py  pet_deleter_view.py  pet_lister_view.py
src/views/http_types/: http_request.py  http_response.py
src/views/interfaces/: view_interface.py
