[project]
name = "aulas"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "iniconfig==2.1.0",
    "mock-alchemy==0.2.6",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pytest==8.4.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.4",
    "sqlalchemy==2.0.41",
    "typing-extensions==4.14.1",
]
